# spaghettinuum

./: .gitignore  .gitmodules  Cargo.toml  architecture.md  build.rs  docker_image.nix  guide_browse.md  readme.md  reference_api.md  reference_spagh_auto.md  server_config.schema.json
.github/workflows/: docker.yml
build_src/: db_shared.rs  mod.rs
build_src/node/: mod.rs  v0.rs
build_src/publisher_admin/: mod.rs  v0.rs
build_src/resolver/: v0.rs
build_src/resolver_dns/: mod.rs  v0.rs
build_src/self_tls/: v0.rs
examples/: piatto_test.rs
readme/: architecture.md  comparison.md  guide_browse.md  guide_identities.md  guide_publishing.md  guide_records.md  notes.md  reference_api.md  reference_spagh.md  reference_spagh_auto.md  reference_spagh_node.md  tls.md
readme/examples/: spagh_auto_discovery_only.json  spagh_auto_reverse_proxy.json  spagh_auto_static_files.json  spagh_demon_full.json  spagh_node_full.json
readme/schemas/: config_spagh_auto.schema.json  config_spagh_demon.schema.json  config_spagh_node.schema.json  publish.schema.json  record_delegate.schema.json  record_dns_a.schema.json  record_dns_aaaa.schema.json  record_dns_cname.schema.json  record_dns_mx.schema.json  record_dns_txt.schema.json  (+3 more)
source/: .sql-formatter.json  Cargo.toml  package.nix  system_docker.nix
source/buildlib/node/: v0.rs
source/buildlib/publisher/: v0.rs
source/buildlib/publisher_admin/: mod.rs  v0.rs
source/buildlib/resolver/: v0.rs
source/buildlib/self_tls/: mod.rs  v0.rs
source/examples/: piatto_test.rs
source/native/: Cargo.toml  build.rs  package.nix
source/native/buildlib/: db_shared.rs  mod.rs
source/native/buildlib/node/: mod.rs  v0.rs
source/native/buildlib/publisher/: mod.rs  v0.rs
source/native/buildlib/publisher_admin/: mod.rs  v0.rs
source/native/buildlib/resolver/: mod.rs  v0.rs
source/native/buildlib/self_tls/: mod.rs  v0.rs
source/native/examples/: piatto_test.rs
source/native/src/interface/config/: mod.rs
source/native/src/interface/config/identity/: mod.rs  v1.rs
source/native/src/interface/config/shared/: mod.rs
source/native/src/interface/config/spagh/: mod.rs
source/native/src/interface/stored/: dbidentity.rs  mod.rs  shared.rs
source/native/src/interface/stored/announcement/: mod.rs  v1.rs
source/native/src/interface/stored/cert/: mod.rs  v1.rs
source/native/src/interface/stored/node_identity/: mod.rs  v1.rs
source/native/src/interface/stored/publisher/: mod.rs  v1.rs
source/native/src/interface/stored/record/: mod.rs  record_utils.rs  v1.rs
source/native/src/interface/stored/record/delegate_record/: mod.rs
source/native/src/interface/stored/record/dns_record/: mod.rs  v1.rs
source/native/src/interface/stored/record/ssh_record/: mod.rs  v1.rs
source/native/src/interface/stored/record/tls_record/: mod.rs  v1.rs
source/native/src/interface/stored/self_tls/: mod.rs  v1.rs
source/native/src/interface/wire/: mod.rs
source/native/src/interface/wire/api/admin/: v1.rs
source/native/src/interface/wire/api/publish/: v1.rs
source/native/src/interface/wire/certify/: v1.rs
source/native/src/interface/wire/node/: mod.rs  v1.rs
source/native/src/interface/wire/resolve/: v1.rs
source/native/src/publishing/: mod.rs
source/native/src/resolving/: mod.rs
source/native/src/self_tls/: db.rs  mod.rs
source/native/src/service/: mod.rs
source/native/src/service/content/: mod.rs
source/native/src/service/node/: db.rs  mod.rs
source/native/src/service/publisher/: admin_db.rs  mod.rs
source/native/src/service/resolver/: mod.rs
source/native/src/service/resolver/dns/: mod.rs
source/native/src/utils/: db_util.rs  dns_util.rs  identity_secret.rs  misc_tests.rs  mod.rs  pgp.rs  publish_util.rs  signed.rs  ssh_util.rs  system_addr.rs  time_util.rs  tls_util.rs
source/nixbuild/: Cargo.toml
source/shared/: Cargo.toml
source/shared/src/: byteszb32.rs  jsonsig.rs  lib.rs  versioned.rs
source/shared/src/interface/: mod.rs  signature.rs
source/shared/src/interface/identity/: mod.rs  v1.rs
source/src/: lib.rs
source/src/interface/config/: mod.rs
source/src/interface/config/auto/: mod.rs
source/src/interface/config/content/: mod.rs
source/src/interface/config/identity/: mod.rs  v1.rs
source/src/interface/config/node/: api_config.rs  mod.rs  node_config.rs  publisher_config.rs  resolver_config.rs
source/src/interface/config/shared/: mod.rs
source/src/interface/config/spagh/: mod.rs
source/src/interface/stored/: mod.rs  shared.rs
source/src/interface/stored/announcement/: mod.rs  v1.rs
source/src/interface/stored/cert/: mod.rs  v1.rs
source/src/interface/stored/identity/: mod.rs  v1.rs
source/src/interface/stored/node_identity/: mod.rs  v1.rs
source/src/interface/stored/publisher/: mod.rs  v1.rs
source/src/interface/stored/record/: mod.rs  record_utils.rs  v1.rs
source/src/interface/stored/record/delegate_record/: mod.rs  v1.rs
source/src/interface/stored/record/dns_record/: mod.rs  v1.rs
source/src/interface/stored/record/ssh_record/: mod.rs  v1.rs
source/src/interface/stored/record/tls_record/: mod.rs  v1.rs
source/src/interface/stored/self_tls/: mod.rs  v1.rs
source/src/interface/wire/api/: mod.rs
source/src/interface/wire/api/admin/: v1.rs
source/src/interface/wire/api/publish/: v1.rs
source/src/interface/wire/api/resolve/: mod.rs  v1.rs
source/src/interface/wire/certify/: mod.rs  v1.rs
source/src/interface/wire/node/: mod.rs  v1.rs
source/src/interface/wire/resolve/: mod.rs  v1.rs
source/src/publishing/: mod.rs
source/src/resolving/: mod.rs
source/src/self_tls/: mod.rs
source/src/service/content/: mod.rs
source/src/service/node/: mod.rs
source/src/service/publisher/: db.rs  mod.rs
source/src/service/resolver/: db.rs  mod.rs
source/src/service/resolver/dns/: mod.rs
source/src/utils/: dns_util.rs  fs_util.rs  identity_secret.rs  mod.rs  publish_util.rs  ssh_util.rs  system_addr.rs  time_util.rs  tls_util.rs  unstable_ip.rs  versioned.rs
spaghettinuum/: Cargo.toml  build.rs
src/: config.rs  lib.rs  standard.rs
src/data/: mod.rs  (+2 more)
(+169 files in other folders)
