[package]
name = "spaghettinuum"
version = "0.1.8"
edition = "2021"
description = "The future of the internet is al dente"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/spaghettinuum"
license = "ISC"

[features]
default = ["card"]
card = [
    "dep:openpgp-card-pcsc",
    "dep:openpgp-card-sequoia",
    "dep:sequoia-openpgp",
]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
manual_future = "0.1.1"
rand = "0.8.5"
generic-array = "0.14.5"
array-init = "2.0.1"
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
sha2 = "0.10.2"
tokio = { version = "1.19.2", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
    "signal",
    "fs",
] }
x509-parser = "0.14.0"
reqwest = { version = "0.11.11", features = [
    "json",
    "rustls-tls-webpki-roots",
], default-features = false }
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
bincode = "1.3.3"
enum_dispatch = "0.3.8"
ed25519-dalek = { version = "2.0.0-rc.2", features = [
    "serde",
    "digest",
    "rand_core",
] }
zbase32 = "0.1.2"
itertools = "0.10.3"
serde_json = "1.0.96"
taskmanager = "0.1.2"
loga = "0.1.3"
aargvark = { version = "0.0.1", features = ["serde_json", "http_types"] }
poem = { version = "1.3.55", features = ["rustls"] }
openpgp-card-pcsc = { version = "0.3.1", optional = true }
openpgp-card-sequoia = { version = "0.1.2", optional = true }
sequoia-openpgp = { version = "1.15.0", features = [
    "ed25519-dalek",
    "sha2",
], optional = true }
moka = { version = "0.11.0", features = ["future"] }
rcgen = "0.10.0"
pem = "2.0.1"
deadpool-sqlite = "0.5.0"
rusqlite = "0.28.0"
trust-dns-server = "0.22.0"
trust-dns-client = "0.22.0"
urlencoding = "2.1.2"
ipnet = "2.7.2"
structre = "0.0.1"
rpassword = "7.2.0"

[build-dependencies]
good-ormning = "0.1.6"
