[package]
name = "spaghettinuum"
version = "0.2.2"
edition = "2021"
description = "The future of the internet is al dente"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/spaghettinuum"
license = "ISC"

[features]
default = ["card"]
card = [
    "dep:openpgp-card-pcsc",
    "dep:openpgp-card-sequoia",
    "dep:sequoia-openpgp",
]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
manual_future = "0.1.1"
rand = "0.8.5"
generic-array = "0.14.7"
array-init = "2.1.0"
futures = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.35.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
    "signal",
    "fs",
] }
x509-parser = "0.14.0"
reqwest = { version = "0.11.22", features = [
    "json",
    "rustls-tls-webpki-roots",
], default-features = false }
rustls = { version = "0.20.9", features = ["dangerous_configuration"] }
bincode = "1.3.3"
enum_dispatch = "0.3.12"
ed25519-dalek = { version = "2.1.0", features = [
    "serde",
    "digest",
    "rand_core",
] }
zbase32 = "0.1.2"
itertools = "0.10.5"
serde_json = "1.0.108"
taskmanager = "0.1.2"
loga = "0.1.5"
aargvark = { version = "0.0.6", features = [
    "serde_json",
    "http_types",
], path = "../../aargvark" }
poem = { version = "1.3.59", features = ["rustls"] }
openpgp-card-pcsc = { version = "0.3.1", optional = true }
openpgp-card-sequoia = { version = "0.1.5", optional = true }
sequoia-openpgp = { version = "1.17.0", features = [
    "ed25519-dalek",
    "sha2",
], optional = true }
moka = { version = "0.11.3", features = ["future"] }
rcgen = "0.10.0"
pem = "2.0.1"
deadpool-sqlite = "0.5.0"
rusqlite = "0.28.0"
trust-dns-server = "0.22.1"
trust-dns-client = "0.22.0"
urlencoding = "2.1.3"
ipnet = "2.9.0"
structre = "0.0.1"
rpassword = "7.3.1"
good-ormning-runtime = { version = "0.1.15", features = ["sqlite", "chrono"] }
network-interface = "1.1.1"
schemars = "0.8.16"

[target.'cfg(target_env = "musl")'.dependencies]
# Add feature to transitive dep of rusqlite, working around crates.io obstructive nannying
libsqlite3-sys = { version = ">=0", features = ["bundled"] }

[build-dependencies]
good-ormning = { version = "0.1.15", features = ["sqlite", "chrono"] }
