[package]
name = "spaghettinuum"
version = "0.4.1"
edition = "2021"
description = "The future of the internet is al dente"
readme = "../readme.md"
repository = "https://github.com/andrewbaxter/spaghettinuum"
license = "ISC"

[features]
default = []
# Enable working with pc/sc cards as identities. Depends on pc/sc daemon and c libraries.
card = [
    "dep:openpgp-card-pcsc",
    "dep:openpgp-card-sequoia",
    "dep:sequoia-openpgp",
]
docsrs = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
manual_future = "0.1"
rand = "0.8"
generic-array = "0.14"
array-init = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
sha2 = { version = "0.10", features = ["oid"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
    "signal",
    "fs",
    "sync",
] }
der = "0.7"
# For hickory ssl
rustls_21 = { package = "rustls", version = "0.21" }
# For htreq
rustls = { version = "0.22" }
bincode = "1"
enum_dispatch = "0.3"
ed25519-dalek = { version = "2", features = ["serde", "digest", "rand_core"] }
zbase32 = "0.1"
itertools = "0.10"
serde_json = "1"
taskmanager = "0.6"
loga = "0.5"
aargvark = { version = "0.3", features = ["serde_json", "http_types", "url"] }
openpgp-card-pcsc = { version = "0.3", optional = true }
openpgp-card-sequoia = { version = "0.1", optional = true }
sequoia-openpgp = { version = "1", features = [
    "ed25519-dalek",
    "sha2",
], optional = true }
moka = { version = "0.11", features = ["future"] }
pem = "2"
deadpool-sqlite = "0.7"
hickory-server = { version = "0.24", features = ["dns-over-rustls"] }
hickory-proto = { version = "0.24", features = [
    "dns-over-rustls",
    "backtrace",
] }
urlencoding = "2"
ipnet = "2"
structre = "0.0"
rpassword = "7"
good-ormning-runtime = { version = "0.1", features = ["sqlite", "chrono"] }
network-interface = "1.1"
schemars = { version = "0.8", features = ["chrono"] }
signature = "2"
x509-cert = { version = "0.2", features = ["builder"] }
rusqlite = "0.30"
tokio-stream = { version = "0.1", features = ["sync", "net"] }
ecdsa = { version = "0.16", features = [
    "pkcs8",
    "der",
    "pem",
    "signing",
    "spki",
    "verifying",
    "alloc",
] }
p256 = "0.13"
hickory-resolver = { version = "0.24", features = [
    "tokio",
    "dns-over-rustls",
    "system-config",
] }
rustls-pemfile = "2"
constant_time_eq = "0.3"
serde_urlencoded = "0.7"
hyper = "1"
hyper-rustls = { version = "0.26", features = [] }
hyper-util = { version = "0.1", features = [
    "service",
    "server-auto",
    "http1",
    "client-legacy",
    "tokio",
] }
tower-service = "0.3"
http-body-util = "0.1"
http-body = "1"
tokio-rustls = "0.25"
path-absolutize = "3"
mime_guess = "2"
jsonschema = "0.17"
htwrap = { version = "0.5" }
async-trait = "0.1"
http = "1"
rustls-native-certs = "0.7"
russh = "0.43"
termion = "4"
russh-config = "0.7"
russh-keys = "0.43"
shell-escape = "0.1"
russh-sftp = "2"
dirs-next = "2.0.0"

[target.'cfg(target_env = "musl")'.dependencies]
# Add feature to transitive dep of rusqlite, working around crates.io obstructive nannying
libsqlite3-sys = { version = ">=0", features = ["bundled"] }

[build-dependencies]
good-ormning = { version = "0.1", features = ["sqlite", "chrono"] }

[package.metadata.docs.rs]
features = ["docsrs"]
