[package]
name = "spaghettinuum"
version = "0.4.1"
edition = "2021"
description = "Spaghettinuum types"
readme = "../../readme.md"
repository = "https://github.com/andrewbaxter/spaghettinuum"
license = "ISC"

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = { version = "0.10", features = ["oid"] }
bincode = "1"
ed25519-dalek = { version = "2", features = ["serde", "digest", "rand_core"] }
zbase32 = "0.1"
serde_json = "1"
schemars = { version = "0.8", features = ["chrono"] }
